# DioGrid

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  cancel.py  config.json  diogrid.py  main.py  random_scenario_test.py  requirements.txt
.github/workflows/: test.yaml
kraken_utils/: api.py  fetcher.py  market.py  orders.py
ocaml/: README.md
ocaml/diogrid/: Dockerfile  dune-project
ocaml/diogrid/lib/: dune
ocaml/diogrid/test/: dune
rtt/: config.json  rtt.py  trading_bot.db
tests/: test_api.py  test_orders.py
v1/: cancel.py  config.json  main.py
v1/.github/workflows/: test.yaml
v1/kraken_utils/: api.py  market.py  orders.py
v1/tests/: test_fetcher.py  test_market.py
v2/: diogrid.py
